hoooooly it works the logic gates are correct